tests/baselines/reference/accessorWithES3.errors.txt
==== tests/cases/compiler/accessorWithES3.ts (4 errors) ====
    
    // error to use accessors in ES3 mode
    
    class C {
        get x() {
        ~~~
!!! accessorWithES3.ts(5,5): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 1;
        }
    }
    
    class D {
        set x(v) {
        ~~~
!!! accessorWithES3.ts(11,5): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        }
    }
    
    var x = {
        get a() { return 1 }
        ~~~
!!! accessorWithES3.ts(16,5): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    
    var y = {
        set b(v) { }
        ~~~
!!! accessorWithES3.ts(20,5): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }